<resources>
    <string name="app_name">Cartadd</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="back">BACK</string>
    <string name="checkout">checkout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
